fix: improved display on smaller device

--- a/apps/retail-app/src/components/transaction-component/date-item.scss
+++ b/apps/retail-app/src/components/transaction-component/date-item.scss
@@ -1,22 +1,20 @@
 .box{
     background-color: var(--fds-secondary-lighter);
-    width: 100%;
-    height: 30px;
+    display: flex;
     border-radius: 4px;
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    align-items: center;
+    overflow: hidden;
 }
 
 .box-title{
-    padding-left: 70px;
+    padding-left: var(--fds-spacing-3);
     font: var(--fds-body-2);
     color: var(--fds-primary);
-    height: 24px;
-    padding-top: 4px;
 }
 
 .box-icon{
-    float: left;
     color: var(--fds-primary);
     padding-left: var(--fds-spacing-4);
 }
