--- a/apps/retail-app/src/components/transaction-component/transaction.scss
+++ b/apps/retail-app/src/components/transaction-component/transaction.scss
@@ -4,31 +4,33 @@
     background-color: var(--fds-secondary-lighter);
     border-radius: 32px;
     color: var(--fds-primary);
-    text-align: center;
-    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .transaction-item{
-    padding: 20px;
+    padding: 3%;
     display: flex;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .material-icons{
     font-size: 16px;
-    padding: 7px;
 }
 
 .transaction-name{
-    width: 90%;
-    height: 100%;
     padding-left: 12px;
+    width: 100%;
 }
 
 .transaction-title{
     font: var(--fds-subtitle-2);
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    
 }
 
 .transaction-subtitle{
